<resources>
    <string name="app_name">driverApp</string>
    <string name="sound">Sound</string>
    <string name="settings">Settings</string>
    <string name="background_execution">Background Execution</string>
    <string name="location_reset">Location Reset</string>
    <string name="accuracy">High Accuracy</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="velocity_control">Velocity Control</string>
    <string name="vehicle_control">Vehicle Detection</string>
    <string name="animal_person_detection">Animal/Person Detection</string>
    <string name="lane_control">Lane Control</string>
    <string name="driver_control">Driver State Control</string>
    <string name="screen_flickering">Screen Flickering</string>
</resources>